tests/errors/match_word_needs_else.vir
// MatchCoverage: Word[8] subject with only a few literals and no `else`.

mod WordNeedsElse {
    incoming x : Word[8] async

    outgoing out : Bit async

    // CHECK: Non-exhaustive match
    out := match x {
        case 0 => true
        case 1 => false
        case 2 => true
    }
}

// CHECK: Check failed
